--- a/index.html
+++ b/index.html
@@ -3,7 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Revolutionize your time with our game-changing hybrid watch featuring ultra-long battery life, durable construction, water resistance, classic design, fitness tracking, and long-lasting reliability. Enjoy weeks of uninterrupted usage on one charge. Crafted from stainless steel and sapphire crystal, our watch handles everyday wear with confidence. Stay worry-free with a waterproof design up to 50 meters. Combine timeless charm with everyday practicality and monitor your activity levels effortlessly. Made to withstand the test of time, this watch epitomizes the pinnacle of durability.">
+    <meta name="keywords" content="Hybrid watch, Ultra-long battery life, Durable construction, Water resistance, Classic design, Fitness tracking, Long-lasting reliability, Stainless steel, Sapphire crystal, Waterproof, Activity tracking, Warranty, Quality assurance, Customer reviews">
+    <meta name="author" content="Tabsir">
     <title>Product Landing Page</title>
+
+    <link rel="preload" href="/main.png" as="image">
     <style>
      html, body{
       background: linear-gradient(90deg,rgb(5,5,5), rgb(20, 20, 20), rgb(25,25,25),rgb(30,30,30), rgb(25,25,25), rgb(20, 20, 20),rgb(5,5,5));
